--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -4,6 +4,8 @@ body{
 
 ul{
   margin: 0 !important;
+  list-style-type: none;
+  padding: 0 !important;
 }
 
 header{
@@ -310,4 +312,58 @@ header{
   background-color: #F5F7FA;
   width: 100%;
   font-weight: 500;
+}
+
+footer{
+  background-color: #F6F9FC;
+  padding: 1rem 2rem 3rem 2rem;
+  margin-top: 2rem;
+  .title{
+    font-weight: 600;
+  }
+  li{
+    margin-bottom: 1rem;
+  }
+  a{
+    color: #4b566b;
+    text-decoration: none;
+    &:hover{
+      color: #144194;
+    }
+  }
+}
+
+.footer-logo{
+  width: 25px;
+  height: 25px;
+  margin-right: 0.5rem;
+}
+
+.footer-social{
+  div{
+    margin-bottom: 1.5rem;
+  }
+}
+
+.form{
+  border: 1px solid rgba(0, 0, 0, 0.085);
+  border-radius: 0.4375rem;
+  width: 45%;
+  padding: 1rem;
+  .err{
+    font-size: 0.8rem;
+    color: red;
+  }
+}
+
+form{
+  height: 100%;
+  width: 100%;
+}
+
+.form-submit-btn{
+  background-color: #144194 !important;
+  color: #fff !important;
+  padding: 0.5rem 4rem !important;
+  font-size: 1.1rem !important;
 }
